@@ -43,6 +43,8 @@ xxx Don't forget to update VALGRIND_MAJOR/MINOR before release
     a program using statically linked malloc or using alternative
     malloc libraries (such as tcmalloc).
 
+  - Performance of leak check has been improved by 40%.
+
 * DRD:
 
   - Fixed a subtle bug that could cause false positive data race reports.
